--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,8 @@
                 android:id="@+id/loading_image"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
-                android:src="@drawable/loading"
+                tools:src="@drawable/loading"
+                app:loadImage="@{@drawable/loading}"
                 app:layout_constraintBottom_toTopOf="@id/loading_text"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
