--- a/app/src/main/res/layout/item_add_channel.xml
+++ b/app/src/main/res/layout/item_add_channel.xml
@@ -27,7 +27,7 @@
             android:id="@+id/title_add_channel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Add New Channel"
+            android:text="@string/add_new_channel"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:layout_marginStart="10dp"
