--- a/app/src/main/res/layout/item_add_channel.xml
+++ b/app/src/main/res/layout/item_add_channel.xml
@@ -13,15 +13,14 @@
 
         <ImageView
             android:id="@+id/btn_add_channel"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:src="@drawable/ic_baseline_add_circle_outline_24"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
+            android:src="@drawable/add_channel"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/title_add_channel"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_chainStyle="packed"
-            app:tint="@color/black" />
+            app:layout_constraintHorizontal_chainStyle="packed" />
 
         <TextView
             android:id="@+id/title_add_channel"
@@ -29,7 +28,7 @@
             android:layout_height="wrap_content"
             android:text="@string/add_new_channel"
             android:textColor="@color/black"
-            android:textStyle="bold"
+            android:textSize="18dp"
             android:layout_marginStart="10dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
