--- a/app/src/main/res/layout/item_channel_selectable.xml
+++ b/app/src/main/res/layout/item_channel_selectable.xml
@@ -50,10 +50,11 @@
             app:layout_constraintVertical_bias="0.0"
             tools:text="EN / Gen1" />
 
-        <CheckBox
+        <androidx.appcompat.widget.AppCompatCheckBox
             android:id="@+id/check"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:buttonTint="@color/main"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
